[gd_scene load_steps=2 format=3 uid="uid://cge6mru5282gf"]

[ext_resource type="Script" path="res://Prog_122d.gd" id="1_4xq72"]

[node name="Prog_122d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xq72")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 36.0
offset_right = 504.0
offset_bottom = 608.0

[node name="Claculate" type="Button" parent="."]
layout_mode = 0
offset_left = 636.0
offset_top = 254.0
offset_right = 887.0
offset_bottom = 345.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 524.0
offset_right = 741.0
offset_bottom = 615.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 780.0
offset_top = 526.0
offset_right = 960.0
offset_bottom = 617.0
text = "Exit"

[connection signal="pressed" from="Claculate" to="." method="_on_claculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
